--- a/html/data.html
+++ b/html/data.html
@@ -88,7 +88,7 @@
 </head>
 <body>
 <nav>
-    <img src="LOGO.png" alt="PAM Logo" class="logo">
+    <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
         <li><a href="main.html">Home</a></li>
         <li><a href="types.html">Pollen Types</a></li>
