--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,16 @@
 </head>
 
 <body>
+  <nav>
+    <img src="../assets/pam.png" alt="PAM Logo" class="logo">
+    <ul>
+      <li><a href="main.html">Home</a></li>
+      <li><a href="types.html">Pollen Types</a></li>
+      <li><a href="data.html">Data Trends</a></li>
+      <li><a href="about.html">About</a></li>
+    </ul>
+  </nav>
+
   <div id="container">
     <!-- Sidebar -->
     <div id="sidebar">
@@ -69,6 +79,13 @@
         Cypress pine, Hazel.</div>
       <div id="grassInfo" class="info-tooltip">Grasses.</div>
       <div id="weedInfo" class="info-tooltip">Ragweed, Mugworth.</div>
+
+      <a href="ndvi.html">
+      <button class="info-btn">
+       <span class="icon">📊</span>Future Predictions
+        </button>
+      </button>
+      </a> 
 
     </div>
 
