--- a/html/main.html
+++ b/html/main.html
@@ -3,233 +3,98 @@
 <head>
   <title>PAM</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      background-color: #ffffff;
-      color: #2F4F2F;
-    }
-    nav {
-      width: 100%;
-      background: #9CAF88;
-      padding: 1rem 0;
-      position: relative;
-    }
-    .logo {
-      position: absolute;
-      left: 1rem;
-      top: 50%;
-      transform: translateY(-50%);
-      height: 50px;
-      width: auto;
-    }
-    nav ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 2rem;
-    }
-    nav a {
-      color: #F5F5DC;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-    }
-    nav a:hover {
-      background: #7A8471;
-    }
-    h1 {
-      text-align: center;
-      margin: 2rem 0;
-      color: #2F4F2F;
-    }
-    .intro-panel {
-      background: #9CAF88;
-      color: #fafafa;
-      padding: 2rem;
-      margin: 2rem 0;
-      border-radius: 10px;
-      width: 80%;
-      max-width: 800px;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
-    }
-    .intro-panel:hover {
-      background: #7A8471;
-      transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-    }
-    .intro-panel h2 {
-      font-size: 2.5rem;
-      margin: 0 0 1rem 0;
-      color: #F5F5DC;
-    }
-    .intro-panel p {
-      font-size: 1.2rem;
-      margin: 0;
-    }
-    #map {
-      height: 500px;
-      width: 80%;
-      max-width: 800px;
-    }
-  
-
-    body, html {
-     margin: 0;
-      height: 100%;
-      overflow-x: hidden;
-    }
-
-    #vanta-bg {
-      width: 100vw;
-      height: 100vh;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: -1;
-    }
-    
-
-    .content {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      color: white;
-      text-align: center;
-      font-family: sans-serif;
-    }
-
-    .preview{
-      background:#a9b69e;
-      text-align: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: all 0.3s ease;
-      
-      border-radius: 10px;
-    }
-
-  
-.container {
-  position: relative;
-  width: 50%;
-}
-
-
-.container img {
-  width: 100%;
-  height: auto;
-}
-
-
-.container .btn {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  background-color: #df600b;
-  color: white;
-  font-size: 16px;
-  padding: 12px 24px;
-  border: none;
-  cursor: pointer;
-  border-radius: 5px;
-}
-
-.container .btn:hover {
-  background-color: rgb(223, 177, 52);
-}
-.column {
-  float: left;
-  width: 50%;
-}
-
-
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-}
-
-.bottomofpage img {
-  width: 100%;
-  height: auto;
-  max-width: 600px; 
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
-  transition: all 0.3s ease;
-  border-radius: 10px;
-  
-}
-
-.bottomofpage img:hover {
-  transform: scale(1.05); 
-  box-shadow: 0 6px 20px rgba(0, 0, 0, 0.2); 
-}
-
-
-.preview {
-  margin-bottom: 2rem; 
-}
-
-
-.bottomofpage {
-  margin-top: 2rem; 
-  text-align: center;
- 
-}
-
-.column img {
-  max-width: 100%; 
-  height: auto;
-}
-
-
-  </style>
+  <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
   <nav>
-    <img src="LOGO.png" alt="PAM Logo" class="logo">
+    <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="main.html">Home</a></li>
       <li><a href="types.html">Pollen Types</a></li>
       <li><a href="data.html">Data Trends</a></li>
       <li><a href="about.html">About</a></li>
     </ul>
   </nav>
- 
- <div id="vanta-bg"></div>
+
+  <section class="hero">
+  <img src="../assets/bulb.jpg" alt="Flower" class="hero-img">
+  <div class="hero-text">
+    <h1>Welcome to P.A.M</h1>
+    <p>Pollen Alert Map – Stay informed, stay healthy.</p>
+  </div>
+</section>
+
+<section class="timeline">
+  <div class="bird-container bird-container-one">
+   <div class="bird bird-one"></div>
+</div>        
+<div class="bird-container bird-container-two">
+  <div class="bird bird-two"></div>
+</div>  
+ <div class="bird-container bird-container-three">
+   <div class="bird bird-three"></div>
+ </div> 
+ <div class="bird-container bird-container-four">
+   <div class="bird bird-four"></div>
+ </div>
+
+  <div class="timeline-card">
+    <h2>How It Works</h2>
+    <p>Everything works yappa yappa...</p>
+  </div>
+  
+  <div class="timeline-card">
+    <h2>Our Mission</h2>
+    <p>P.A.M is dedicated to providing...</p>
+  </div>
+  
+  <div class="timeline-card">
+    <h2>Data Trends</h2>
+    <p>We track pollen data and forecasts...</p>
+  </div>
+
+  <!-- Map wrapper -->
+  <div class="map-wrapper">
+    <a href="index.html">
+      <button class="map-btn">Go to Map Page</button>
+    </a>
+    <div id="map"></div>
+  </div>
+
+</section>
 
 
- 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+  <!-- <div class="container">
+  <img src="../assets/Map.png" alt="map">
+  <a href="index.html">
+  <button class="btn" >Click here to access the map</button>
+  </a>
+</div> -->
 
-<script>
-  VANTA.BIRDS({
-    el: "#vanta-bg",          
-    mouseControls: true,
-    touchControls: true,
-    gyroControls: false,
-    minHeight: 200.00,
-    minWidth: 200.00,
-    scale: 1.00,
-    scaleMobile: 1.00,
-    backgroundColor: 0x3d8553,
-    color1: 0xffff00,         
-    color2: 0xffcc00          
-  });
-</script>
+  
 
-  <div class="intro-panel">
+  <script>
+    function initMap() {
+      const location = { lat: 39.8283, lng: -98.5795 };
+      const map = new google.maps.Map(document.getElementById('map'), {
+        zoom: 3,
+        center: location,
+        mapId: '4cd92f36fb2ff143b1b66208'
+      });
+    }
+  </script>
+
+  <!-- Load Google Maps JS API, replace YOUR_MAPS_API_KEY -->
+  <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&callback=initMap">
+  </script>
+
+
+
+
+
+  <!-- <div class="intro-panel">
     <h2>Welcome to P.A.M</h2>
     <p>Pollen Alert Map - Your comprehensive solution for real-time pollen tracking and forecasting. Stay informed, stay healthy.</p>
   </div>
@@ -238,12 +103,7 @@
     <h2>Pollen Forecast Map Preview</h2>
   </div>
   
-  <div class="container">
-  <img src="Map.png" alt="map">
-  <a href="mapui.html">
-  <button class="btn" >Click here to access the map</button>
-  </a>
-</div>
+  
 <div class="row">
   <div class="column">
     <div class="preview">
@@ -253,14 +113,14 @@
   </div>
   <div class="column">
     <div class ="bottomofpage">
-     <img src="Pollen.png">
+     <img src="../assets/Pollen.png">
   </div>
 </div>
 
 <div class="row">
   <div class="column">
     <div class ="bottomofpage">
-     <img src="Pollen.png">
+     <img src="../assets/Pollen.png">
   </div>
   <div class="column">
     <div class="preview">
@@ -268,33 +128,7 @@
     <p>P.A.M (Pollen Alert Monitor) is dedicated to providing accurate, real-time pollen information to help you manage allergies and plan your day better.</p>
   </div>
   </div>
-</div>
-
- 
-   <script>
-    function initMap() {
-      const location = { lat: 32.32, lng: 35.32 };
-      const map = new google.maps.Map(document.getElementById('map'), {
-        zoom: 8,
-        center: location,
-        mapId: '4cd92f36fb2ff143b1b66208'
-      });
- 
-      // Place a marker at the location (optional)
-    //   const marker = new google.maps.marker.AdvancedMarkerElement({
-    //     position: location,
-    //     map: map,
-    //     title: "Pollen data location"
-    //   });
- 
-      // You can add more markers or overlays here later
-    }
-  </script>
-
-  <!-- Load Google Maps JS API, replace YOUR_MAPS_API_KEY -->
-  <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&callback=initMap">
-  </script>
+</div> -->
 
 
 </body>
