--- a/html/ndvi.html
+++ b/html/ndvi.html
@@ -361,7 +361,7 @@
     </style>
 </head>
 <nav>
-    <img src="LOGO.png" alt="PAM Logo" class="logo">
+    <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
         <li><a href="main.html">Home</a></li>
         <li><a href="types.html">Pollen Types</a></li>
@@ -476,7 +476,7 @@
             attribution.style.fontSize = '10px';
             attribution.style.padding = '2px';
             map.controls[google.maps.ControlPosition.BOTTOM_RIGHT].push(attribution);
-
+// C:\Users\a00311387\Desktop\PAM\data\predicted_pollen_20days.json
             fetch('/data/predicted_pollen_20days.json')
                 .then(response => response.json())
                 .then(forecasts => {
