--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,8 @@
       /* line-height: 1.6;
       overflow-x: hidden; */
       min-height: 100vh;
-      padding: 20px;
+      background-image: url('../assets/cartographer (1).png');
+      /* padding: 20px; */
     }
 
     nav {
@@ -29,12 +30,13 @@
     }
 
     .logo {
-      position: absolute;
-      left: 1rem;
-      top: 50%;
-      transform: translateY(-50%);
-      height: 200px;
-    }
+     position: absolute;
+     left: 1rem;
+     top: 50%;
+     transform: translateY(-50%);
+     height: 50px;
+     width: auto;
+ }
 
     nav ul {
       list-style: none;
@@ -465,16 +467,16 @@
 </head>
 
 <body>
-  <nav>
-    <img src="../LOGO.png" alt="PAM Logo" class="logo">
+<nav>
+    <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="main.html">Home</a></li>
-      <li><a href="types.html">Pollen Types</a></li>
-      <li><a href="data.html">Data Trends</a></li>
-      <li><a href="ndvi.html">Forecast</a></li>
-      <li><a href="about.html">About</a></li>
+        <li><a href="main.html">Home</a></li>
+        <li><a href="types.html">Pollen Types</a></li>
+        <li><a href="index.html">Pollen Map</a></li>
+        <li><a href="ndvi.html">Forecast</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
-  </nav>
+</nav>
 
   <div class="hero">
     <h1>Breathe easier with P.A.M</h1>
@@ -584,23 +586,23 @@
     <div class="team-grid">
       <div class="team-member">
         <div class="team-avatar">W</div>
-        <h4>WIK</h4>
-        <p>[Role]</p>
+        <h4>WIKTORIA LESZCZYNSKA</h4>
+        <p>Developer</p>
       </div>
       <div class="team-member">
         <div class="team-avatar">K</div>
-        <h4>KAT</h4>
-        <p>[Role]</p>
+        <h4>KATIE KEEGAN</h4>
+        <p>Developer</p>
       </div>
       <div class="team-member">
         <div class="team-avatar">F</div>
-        <h4>FAT</h4>
-        <p>[Role]</p>
+        <h4>FATIMA RHAZIA</h4>
+        <p>Business modelling</p>
       </div>
       <div class="team-member">
         <div class="team-avatar">M</div>
-        <h4>MAV</h4>
-        <p>dev</p>
+        <h4>MAVIS CHIA</h4>
+        <p> Developer</p>
       </div>
     </div>
   </div>
