--- a/html/index.html
+++ b/html/index.html
@@ -7,15 +7,16 @@
 </head>
 
 <body>
-  <nav>
+<nav>
     <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="main.html">Home</a></li>
-      <li><a href="types.html">Pollen Types</a></li>
-      <li><a href="data.html">Data Trends</a></li>
-      <li><a href="about.html">About</a></li>
+        <li><a href="main.html">Home</a></li>
+        <li><a href="types.html">Pollen Types</a></li>
+        <li><a href="index.html">Pollen Map</a></li>
+        <li><a href="ndvi.html">Forecast</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
-  </nav>
+</nav>
 
   <div id="container">
     <!-- Sidebar -->
@@ -97,7 +98,7 @@
 <script src="../js/main.js"></script>
 
 <script
-  src="https://maps.googleapis.com/maps/api/js?callback=initMap&v=weekly&key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&language=en"
+  src="https://maps.googleapis.com/maps/api/js?callback=initMap&v=weekly&key=AIzaSyDof8QDt0_6EghBjqAucP4nnlKqN8cG5y0&language=en"
   defer>
   </script>
 </body>
