--- a/html/main.html
+++ b/html/main.html
@@ -9,12 +9,13 @@
   <nav>
     <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="main.html">Home</a></li>
-      <li><a href="types.html">Pollen Types</a></li>
-      <li><a href="data.html">Data Trends</a></li>
-      <li><a href="about.html">About</a></li>
+        <li><a href="main.html">Home</a></li>
+        <li><a href="types.html">Pollen Types</a></li>
+        <li><a href="index.html">Pollen Map</a></li>
+        <li><a href="ndvi.html">Forecast</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
-  </nav>
+</nav>
 
   <section class="hero">
   <img src="../assets/bulb.jpg" alt="Flower" class="hero-img">
@@ -40,17 +41,17 @@
 
   <div class="timeline-card">
     <h2>How It Works</h2>
-    <p>Everything works yappa yappa...</p>
+    <p>We combine NASA's MODIS satellite vegetation data with proprietary machine learning models to predict pollen levels up to 20 days in advance.</p>
   </div>
   
   <div class="timeline-card">
     <h2>Our Mission</h2>
-    <p>P.A.M is dedicated to providing...</p>
+    <p>P.A.M is dedicated to providing accurate pollen forecasts that outshines modern day technology.</p>
   </div>
   
   <div class="timeline-card">
     <h2>Data Trends</h2>
-    <p>We track pollen data and forecasts...</p>
+    <p>We track pollen data and forecasts around the globe to provide our users an accurate forecast anywhere.</p>
   </div>
 
   <!-- Map wrapper -->
@@ -87,7 +88,7 @@
 
   <!-- Load Google Maps JS API, replace YOUR_MAPS_API_KEY -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDof8QDt0_6EghBjqAucP4nnlKqN8cG5y0&callback=initMap">
   </script>
 
 
