--- a/html/ndvi.html
+++ b/html/ndvi.html
@@ -17,7 +17,8 @@
             font-family: 'Roboto', sans-serif;
             background: #EDE6D6;
             min-height: 100vh;
-            padding: 20px;
+            /* padding: 20px; */
+            background-image: url('../assets/cartographer (1).png');
         }
 
         .header {
@@ -365,7 +366,7 @@
     <ul>
         <li><a href="main.html">Home</a></li>
         <li><a href="types.html">Pollen Types</a></li>
-        <li><a href="data.html">Data Trends</a></li>
+        <li><a href="index.html">Pollen Map</a></li>
         <li><a href="ndvi.html">Forecast</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
@@ -449,7 +450,7 @@
     </div>
 
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDj1vaGauNRgZ8uF5e0WjVgYopOe72avdQ&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDof8QDt0_6EghBjqAucP4nnlKqN8cG5y0&callback=initMap"></script>
     <script>
         let map, allForecasts = [];
         const slider = document.getElementById('dateSlider');
