--- a/html/types.html
+++ b/html/types.html
@@ -7,15 +7,16 @@
   <link rel="stylesheet" href="../css/types.css">
 </head>
 <body>
-  <nav>
+<nav>
     <img src="../assets/pam.png" alt="PAM Logo" class="logo">
     <ul>
-      <li><a href="main.html">Home</a></li>
-      <li><a href="types.html">Pollen Types</a></li>
-      <li><a href="data.html">Data Trends</a></li>
-      <li><a href="about.html">About</a></li>
+        <li><a href="main.html">Home</a></li>
+        <li><a href="types.html">Pollen Types</a></li>
+        <li><a href="index.html">Pollen Map</a></li>
+        <li><a href="ndvi.html">Forecast</a></li>
+        <li><a href="about.html">About</a></li>
     </ul>
-  </nav>
+</nav>
 
   <header>
     <h1>Pollen Types</h1>
