--- a/html/data.html
+++ b/html/data.html
@@ -92,7 +92,7 @@
     <ul>
         <li><a href="main.html">Home</a></li>
         <li><a href="types.html">Pollen Types</a></li>
-        <li><a href="data.html">Data Trends</a></li>
+        <li><a href="index.html">Pollen Map</a></li>
         <li><a href="ndvi.html">Forecast</a></li>
         <li><a href="about.html">About</a></li>
     </ul>
